<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button_round_rect2_border"
    android:id="@+id/relativeLayout4">

    <EditText
        android:id="@+id/edText"

        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="66dp"
        android:background="#ffffff"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Firstname"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edText1"

        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Lastname"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edText2"

        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="176dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Email"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edText3"

        android:layout_width="200dp"
        android:layout_height="41dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Username"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <EditText
        android:id="@+id/edText4"

        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginBottom="260dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="29dp"
        android:background="@drawable/custom_button_press_effect"
        android:text="@string/Signup"
        android:textColor="#ffffff"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/custom_button_press_effect"
        android:text="@string/Back"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>