<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/custom_button_round_rect2_border"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="#ffffffff"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName" />

<!--
    <EditText
        android:id="@+id/editText4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/custom_button_round_rect_border"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/latitude"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:background="@drawable/custom_button_round_rect_border"
        android:inputType="numberDecimal|numberSigned"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/longtitude" />
        -->


    <EditText
        android:id="@+id/editText2"
        android:layout_width="220dp"
        android:layout_height="158dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:background="#ffffffff"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/description"
        android:inputType="text|textMultiLine|textCapSentences" />

    <Button
        android:id="@+id/send"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:background="@drawable/custom_button_round_rect_border"
        android:text="@string/send_info" />



</RelativeLayout>